--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,19 @@
 [tool.poetry]
-name = "indexer"
+name = "uniswap"
 version = "0.1.0"
 description = "Web3 indexer with Apibara"
 authors = []
 
 [tool.poetry.scripts]
-indexer = "indexer.main:cli"
+uniswap-indexer = "uniswap.main:cli"
 
 [tool.poetry.dependencies]
 python = ">3.8,<3.10"
-apibara = "^0.5.6"
+apibara = "^0.5.16"
 click = "^8.1.3"
 starknet-py = "^0.6.1a0"
 pymongo = {extras = ["srv"], version = "^4.1.1"}
+structlog = "^22.3.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
