--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ click = "^8.1.3"
 starknet-py = "^0.6.1a0"
 pymongo = {extras = ["srv"], version = "^4.1.1"}
 structlog = "^22.3.0"
+strawberry-graphql = {extras = ["debug-server"], version = "^0.151.0"}
+aiohttp = "^3.8.3"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
