--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
-name = "uniswap"
+name = "swap"
 version = "0.1.0"
-description = "Web3 indexer with Apibara"
+description = "DEX indexer with Apibara"
 authors = []
 
 [tool.poetry.scripts]
-uniswap-indexer = "uniswap.main:cli"
+swap-indexer = "swap.main:cli"
 
 [tool.poetry.dependencies]
 python = ">3.8,<3.10"
