--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ strawberry-graphql = {extras = ["debug-server"], version = "^0.151.0"}
 aiohttp = "^3.8.3"
 aiohttp_cors = "^0.7.0"
 celery = {extras = ["redis"], version = "^5.2.7"}
+typeguard = "2.13.3"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
