--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ swap-indexer = "swap.main:cli"
 
 [tool.poetry.dependencies]
 python = ">3.8,<3.10"
-apibara = "^0.5.16"
+apibara = { version = "0.6.6a2", extras = ["indexer"] }
 click = "^8.1.3"
 starknet-py = "^0.6.1a0"
 pymongo = {extras = ["srv"], version = "^4.1.1"}
@@ -18,6 +18,7 @@ strawberry-graphql = {extras = ["debug-server"], version = "^0.151.0"}
 aiohttp = "^3.8.3"
 aiohttp_cors = "^0.7.0"
 celery = {extras = ["redis"], version = "^5.2.7"}
+typeguard = "2.13.3"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
