--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ swap-indexer = "swap.main:cli"
 
 [tool.poetry.dependencies]
 python = ">3.8,<3.10"
-apibara = { version = "0.6.6a3", extras = ["indexer"] }
+apibara = { version = "0.7.2", extras = ["indexer"] }
 click = "^8.1.3"
 starknet-py = "^0.6.1a0"
 pymongo = {extras = ["srv"], version = "^4.1.1"}
@@ -19,6 +19,7 @@ aiohttp = "^3.8.3"
 aiohttp_cors = "^0.7.0"
 celery = {extras = ["redis"], version = "^5.2.7"}
 typeguard = "2.13.3"
+urllib3 = "^1.26.16"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
