--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ swap-indexer = "swap.main:cli"
 python = ">3.8,<3.10"
 apibara = { version = "0.7.3a1", extras = ["indexer"] }
 click = "^8.1.3"
-starknet-py = "^0.6.1a0"
+starknet-py = "^0.18.3"
 pymongo = {extras = ["srv"], version = "^4.1.1"}
 structlog = "^22.3.0"
 strawberry-graphql = {extras = ["debug-server"], version = "^0.151.0"}
